Bug 1200729 - Recompute FrameLayerBuilder item visibility if dirty region changes. r=mwoodrow, a=sylvestre

Make the FrameLayerBuilder remember for what region it has calculated
display item visibility, then recompute the visibility whenever the
dirty region it is passed to DrawPaintedLayer changes.

This means that the caller does not have to know the entire dirty region
that will be drawn for the transaction, but we can still optimise cases
where it knows some of the dirty region in advance.

This fixes a regression where MultiTiledContentClient's low-res display
port would not be painted if a smaller region of its high-res buffer had
already been painted that transaction, since the FrameLayerBuilder
had decided that most of the larger low-res region was invisible.

--HG--
extra : source : 37c0c6cd603a20b69a62c6e99cfd6a902d20ba5d